--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -321,7 +321,7 @@
     <nav class="bg-white shadow">
       <div class="container mx-auto px-4 py-1 flex items-center justify-between">
         <a href="{% url 'home' %}" class="flex items-center">
-          <img src="{% static 'images/esa-logo.png' %}" alt="ESA Logo" class="custom-logo " />
+          <img src="{% static './static/images/esa-logo.png' %}" alt="ESA Logo" class="custom-logo " />
         </a>
         <ul class="hidden md:flex space-x-6">
           <li><a href="{% url 'home' %}" class="text-blue-900 hover:text-green-700 font-semibold">Home</a></li>
